
/*
 * Copyright 2018 Attribyte, LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and limitations under the License.
 *
 */

syntax="proto3";

package org.attribyte.essem.proto3;

option java_outer_classname = "ReportProtos";

message EssemReport {

   enum TimeUnit {
     UNKNOWN = 0;
     NANOS = 1;
     MICROS = 2;
     MILLIS = 3;
     SECONDS = 4;
     MINUTES = 5;
     HOURS = 6;
     DAYS = 7;
   }

   message Gauge {
     string name = 1;
     double value = 2;
     string comment = 3;
   }

   message Counter {
     string name = 1;
     uint64 count = 2;
   }

   message Meter {
     string name = 1;
     double oneMinuteRate = 2;
     double fiveMinuteRate = 3;
     double fifteenMinuteRate = 4;
     double meanRate = 5;
     uint64 count = 6;
   }

   message Histogram {
     string name = 1;
     uint64 count = 2;
     double max = 3;
     double mean = 4;
     double min = 5;
     double std = 6;
     double median = 7;
     double percentile75 = 8;
     double percentile95 = 9;
     double percentile98 = 10;
     double percentile99 = 11;
     double percentile999 = 12;
     bytes hdrHistogram = 13;
   }

   message Timer {
     string name = 1;
     double oneMinuteRate = 2;
     double fiveMinuteRate = 3;
     double fifteenMinuteRate = 4;
     double meanRate = 5;
     uint64 count = 6;
     double max = 7;
     double mean = 8;
     double min = 9;
     double std = 10;
     double median = 11;
     double percentile75 = 12;
     double percentile95 = 13;
     double percentile98 = 14;
     double percentile99 = 15;
     double percentile999 = 16;
     bytes hdrHistogram = 17;
   }

   repeated Meter meter = 1;
   repeated Timer timer = 2;
   repeated Counter counter = 3;
   repeated Histogram histogram = 4;
   repeated Gauge gauge = 5;
   uint64 timestamp = 6;
   TimeUnit rateUnit = 7;
   TimeUnit durationUnit = 8;
   string application = 9;
   string host = 10;
   string instance = 11;
   string role = 12;
   string status = 13;
   string description = 14;
}